tests/rosetta/out/C/abbreviations-automatic.error
cc: exit status 1
/tmp/abbreviations-automatic.c: In function ‘distinct’:
/tmp/abbreviations-automatic.c:166:11: error: incompatible types when initializing type ‘int’ using type ‘map_string_int’
  166 |   int m = tmp6;
      |           ^~~~
/tmp/abbreviations-automatic.c:171:13: error: expected ‘)’ before ‘in’
  171 |     if ((!(x in m))) {
      |           ~ ^~~
      |             )
/tmp/abbreviations-automatic.c:172:8: error: request for member ‘data’ in something not a structure or union
  172 |       m.data[x] = 1;
      |        ^
/tmp/abbreviations-automatic.c: In function ‘mochi_main’:
/tmp/abbreviations-automatic.c:371:17: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  371 |     int words = fields(lines.data[i]);
      |                 ^~~~~~
/tmp/abbreviations-automatic.c:372:23: error: incompatible type for argument 1 of ‘abbrevLen’
  372 |     int l = abbrevLen(words);
      |                       ^~~~~
      |                       |
      |                       int
/tmp/abbreviations-automatic.c:183:27: note: expected ‘list_string’ but argument is of type ‘int’
  183 | int abbrevLen(list_string words) {
      |               ~~~~~~~~~~~~^~~~~
/tmp/abbreviations-automatic.c:373:28: error: invalid operands to binary + (have ‘char *’ and ‘char *’)
  373 |     printf("%d\n", pad2(l) + "  " + lines.data[i]);
      |                    ~~~~~~~ ^
      |                    |       |
      |                    char *  char *
